--- a/Web/lab2/index.html
+++ b/Web/lab2/index.html
@@ -9,26 +9,208 @@
   </head>
   <body>
     
-    <div class="container">
-      <div class="row">
-      <div class="col-8">
-        <div class="card">
-          <img href="page1.jpg" class="card-img-top">
-          <h3 class="card-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus molestiae delectus reprehenderit porro repudiandae esse odio perferendis? Alias, blanditiis doloremque voluptatum sit quae accusantium quidem est optio reprehenderit nemo voluptates?</h3>
+<!--Navbar-->
+<nav class="navbar shadow-lg fixed-top">
+  <div class="container-fluid justify-content-center justify-content-xl-start"> <!-- Added justify-content-center -->
+    <a class="navbar-brand display-1" href="index.html">News from far beyond</a>
+  </div>
+</nav>
+
+<!--Main content-->
+<div class="container-fluid align-items-center">
+  <!--Vertical-->
+  <div class="row justify-content-center">
+
+    <div class="col-10 mb-3 mb-xl-0 col-md-5 col-xl-2">
+      <a href="page1.html" class="text-decoration-none">
+      <div class="card">
+        <img class="img-fluid rounded" src="page1.jpg">
+        <div class="card-body">
+          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
+          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
         </div>
       </div>
-      <div class="col-4">
-        <div class="card">
-          <img href="page1.jpg" class="card-img-top">
-          <h3 class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, saepe. Praesentium, eaque id, quas ut commodi ad velit ipsum ea quis deserunt veritatis soluta at nam placeat quos, assumenda blanditiis!</h3>
-        </div>
-        <div class="card">
-          <img href="page1.jpg" class="card-img-top">
-          <h3 class="card-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque dolor perferendis quia amet suscipit atque nesciunt fugiat voluptatum? Distinctio, molestias! Adipisci excepturi dolores mollitia impedit illum deleniti earum sequi aliquam!</h3>
+      </a>
+    </div>
+
+    <div class="col-10 mb-3 mb-xl-0 col-md-5 col-xl-2">
+      <a href="page1.html" class="text-decoration-none">
+      <div class="card">
+        <img class="img-fluid rounded" src="page1.jpg">
+        <div class="card-body">
+          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
+          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
         </div>
       </div>
+      </a>
     </div>
+
+    <div class="col-10 mb-3 mb-xl-0 col-md-5 col-xl-2">
+      <a href="page1.html" class="text-decoration-none">
+      <div class="card">
+        <img class="img-fluid rounded" src="page1.jpg">
+        <div class="card-body">
+          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
+          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+        </div>
+      </div>
+      </a>
     </div>
+
+    <div class="col-10 mb-3 mb-xl-0 col-md-5 col-xl-2">
+      <a href="page1.html" class="text-decoration-none">
+      <div class="card">
+        <img class="img-fluid rounded" src="page1.jpg">
+        <div class="card-body">
+          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
+          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+        </div>
+      </div>
+      </a>
+    </div>
+
+  </div>
+
+  <!--Horizontal-->
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-10 col-xl-8 d-flex justify-content-center">
+      <div class="row mt-0 mt-xl-3 justify-content-center">
+        <div class="col-10 mb-3 mb-xl-0 col-md-12 col-xl-6">
+          <a href="page1.html" class="text-decoration-none">
+          <div class="card">
+            <div class="row align-items-center">
+              <div class="col-12 col-md-6 col-xl-6">
+                <img class="img-fluid rounded" src="page1.jpg">
+              </div>
+              <div class="col-12 col-md-6 col-xl-6">
+                <div class="card-body">
+                  <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
+                  <div class="card-text">ibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="col-10 mb-3 mb-xl-0 col-md-12 col-xl-6">
+          <a href="page1.html" class="text-decoration-none">
+            <div class="card">
+              <div class="row align-items-center">
+                <div class="col-12 col-md-6 col-xl-6">
+                  <img class="img-fluid rounded" src="page1.jpg">
+                </div>
+                <div class="col-12 col-md-6 col-xl-6">
+                  <div class="card-body">
+                    <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
+                    <div class="card-text">ibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            </a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+  <!--Vertical-->
+  <div class="row justify-content-center">
+
+    <div class="col-10 mb-3 mt-0 mt-xl-3 mb-xl-0 col-md-5 col-xl-2">
+      <a href="page1.html" class="text-decoration-none">
+      <div class="card">
+        <img class="img-fluid rounded" src="page1.jpg">
+        <div class="card-body">
+          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
+          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+        </div>
+      </div>
+      </a>
+    </div>
+
+    <div class="col-10 mb-3 mt-0 mt-xl-3 mb-xl-0 col-md-5 col-xl-2">
+      <a href="page1.html" class="text-decoration-none">
+      <div class="card">
+        <img class="img-fluid rounded" src="page1.jpg">
+        <div class="card-body">
+          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
+          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+        </div>
+      </div>
+      </a>
+    </div>
+
+    <div class="col-10 mb-3 mt-0 mt-xl-3 mb-xl-0 col-md-5 col-xl-2">
+      <a href="page1.html" class="text-decoration-none">
+      <div class="card">
+        <img class="img-fluid rounded" src="page1.jpg">
+        <div class="card-body">
+          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
+          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+        </div>
+      </div>
+      </a>
+    </div>
+
+    <div class="col-10 mb-3 mt-0 mt-xl-3 mb-xl-0 col-md-5 col-xl-2">
+      <a href="page1.html" class="text-decoration-none">
+      <div class="card">
+        <img class="img-fluid rounded" src="page1.jpg">
+        <div class="card-body">
+          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
+          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+        </div>
+      </div>
+      </a>
+    </div>
+
+  </div>
+
+<!--Divider-->
+<div class="container-fluid">
+  <div class="row justify-content-center"> <!-- Center the row -->
+  <div class="col-10">
+      <hr class="hr hr-blurry" />
+  </div>
+  </div>
+</div>
+
+<!--Footer-->
+<div class="footer py-3 mt-3 mb-5">
+  <div class="container-fluid">
+    <div class="row justify-content-xl-between"> <!-- Center the row -->
+
+      <!-- Column 1 -->
+      <div class="col-6 col-xl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
+        <ul class="nav flex-column">
+          <h3>Chegototam</h3>
+          <li>aodkflgbnafdiklug</li>
+          <li>aodkflgbnaf</li>
+        </ul>
+      </div>
+
+      <!-- Column 2 -->
+      <div class="col-6 col-xl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
+        <ul class="nav flex-column">
+          <h3>Chegototam</h3>
+          <li>aodkflgbnafdiklug</li>
+          <li>aodkflgb</li>
+        </ul>
+      </div>
+
+      <!-- Column 3 -->
+      <div class="col-6 mt-3 mt-xl-0 col-xl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
+        <ul class="nav flex-column">
+          <h3>Chegototam</h3>
+          <li>aodkflgbnafdiklug</li>
+          <li>aodkflgbnaf</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
