--- a/Web/lab2/index.html
+++ b/Web/lab2/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>News from far beyond</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
     
 <!--Navbar-->
-<nav class="navbar shadow-lg fixed-top">
-  <div class="container-fluid justify-content-center justify-content-xl-start"> <!-- Added justify-content-center -->
+<nav class="navbar shadow-lg">
+  <div class="container-fluid justify-content-center justify-content-xxl-start"> <!-- Added justify-content-center -->
     <a class="navbar-brand display-1" href="index.html">News from far beyond</a>
   </div>
 </nav>
@@ -21,49 +21,54 @@
   <!--Vertical-->
   <div class="row justify-content-center">
 
-    <div class="col-10 mb-3 mb-xl-0 col-md-5 col-xl-2">
+    <div class="col-10 mb-3 mb-xxl-0 col-md-5 col-xxl-2">
       <a href="page1.html" class="text-decoration-none">
       <div class="card">
         <img class="img-fluid rounded" src="page1.jpg">
         <div class="card-body">
-          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
-          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+          <div class="card-title"><h4>История мирового рекорда, поставленного МиГ-25</h4></div>
+          <div class="card-text overflow-hidden">Вспоминаем легендарный полёт МиГ-25, в котором перехватчик поставил абсолютный рекорд высоты для самолётов, не побитый до сих пор</div>
+          <small class="text-body-secondary">8 марта 2025, 18:50</small>
         </div>
       </div>
       </a>
     </div>
 
-    <div class="col-10 mb-3 mb-xl-0 col-md-5 col-xl-2">
-      <a href="page1.html" class="text-decoration-none">
+    <div class="col-10 mb-3 mb-xxl-0 col-md-5 col-xxl-2">
+      <a href="page2.html" class="text-decoration-none">
       <div class="card">
-        <img class="img-fluid rounded" src="page1.jpg">
+        <img class="img-fluid rounded" src="page2.jpg">
         <div class="card-body">
-          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
-          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+          <div class="card-title"><h4>Росавиация хочет регламентировать полёты пчёл</h4></div>
+          <div class="card-text overflow-hidden">Росавиация предлагает, начиная с 2022 года, ввести ограничения на полёты пчёл, ос, шершней и других летучих насекомых. В ведомстве пояснили, что представители этих биологических видов создают помехи для безопасности движения воздушных судов гражданской авиации.
+          </div>
+          <small class="text-body-secondary">14 марта 2021, 16:35</small>
         </div>
       </div>
       </a>
     </div>
 
-    <div class="col-10 mb-3 mb-xl-0 col-md-5 col-xl-2">
-      <a href="page1.html" class="text-decoration-none">
+    <div class="col-10 mb-3 mb-xxl-0 col-md-5 col-xxl-2">
+      <a href="page3.html" class="text-decoration-none">
       <div class="card">
-        <img class="img-fluid rounded" src="page1.jpg">
+        <img class="img-fluid rounded" src="page3.png">
         <div class="card-body">
-          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
-          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+          <div class="card-title"><h4>Красноярский космонавт скоро отправится на МКС: что он там будет делать</h4></div>
+          <div class="card-text overflow-hidden">Он уже пробыл больше недели на карантине</div>
+          <small class="text-body-secondary">10 марта 2025, 09:58</small>
         </div>
       </div>
       </a>
     </div>
 
-    <div class="col-10 mb-3 mb-xl-0 col-md-5 col-xl-2">
+    <div class="col-10 mb-3 mb-xxl-0 col-md-5 col-xxl-2">
       <a href="page1.html" class="text-decoration-none">
       <div class="card">
         <img class="img-fluid rounded" src="page1.jpg">
         <div class="card-body">
-          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
-          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+          <div class="card-title"><h4>История мирового рекорда, поставленного МиГ-25</h4></div>
+          <div class="card-text overflow-hidden">Вспоминаем легендарный полёт МиГ-25, в котором перехватчик поставил абсолютный рекорд высоты для самолётов, не побитый до сих пор</div>
+          <small class="text-body-secondary">8 марта 2025, 18:50</small>
         </div>
       </div>
       </a>
@@ -73,19 +78,21 @@
 
   <!--Horizontal-->
   <div class="row justify-content-center">
-    <div class="col-12 col-md-10 col-xl-8 d-flex justify-content-center">
-      <div class="row mt-0 mt-xl-3 justify-content-center">
-        <div class="col-10 mb-3 mb-xl-0 col-md-12 col-xl-6">
-          <a href="page1.html" class="text-decoration-none">
+    <div class="col-12 col-md-10 col-xxl-8 d-flex justify-content-center">
+      <div class="row mt-0 mt-xxl-3 justify-content-center">
+        <div class="col-10 mb-3 mb-xxl-0 col-md-12 col-xxl-6">
+          <a href="page2.html" class="text-decoration-none">
           <div class="card">
             <div class="row align-items-center">
-              <div class="col-12 col-md-6 col-xl-6">
-                <img class="img-fluid rounded" src="page1.jpg">
+              <div class="col-12 col-md-6 col-xxl-6">
+                <img class="img-fluid rounded" src="page2.jpg">
               </div>
-              <div class="col-12 col-md-6 col-xl-6">
+              <div class="col-12 col-md-6 col-xxl-6">
                 <div class="card-body">
-                  <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
-                  <div class="card-text">ibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+                  <div class="card-title"><h4>Росавиация хочет регламентировать полёты пчёл</h4></div>
+                  <div class="card-text overflow-hidden">Росавиация предлагает, начиная с 2022 года, ввести ограничения на полёты пчёл, ос, шершней и других летучих насекомых. В ведомстве пояснили, что представители этих биологических видов создают помехи для безопасности движения воздушных судов гражданской авиации.
+                  </div>
+                  <small class="text-body-secondary">14 марта 2021, 16:35</small>
                 </div>
               </div>
             </div>
@@ -93,17 +100,18 @@
           </a>
         </div>
 
-        <div class="col-10 mb-3 mb-xl-0 col-md-12 col-xl-6">
-          <a href="page1.html" class="text-decoration-none">
+        <div class="col-10 mb-3 mb-xxl-0 col-md-12 col-xxl-6">
+          <a href="page3.html" class="text-decoration-none">
             <div class="card">
               <div class="row align-items-center">
-                <div class="col-12 col-md-6 col-xl-6">
-                  <img class="img-fluid rounded" src="page1.jpg">
+                <div class="col-12 col-md-6 col-xxl-6">
+                  <img class="img-fluid rounded" src="page3.png">
                 </div>
-                <div class="col-12 col-md-6 col-xl-6">
+                <div class="col-12 col-md-6 col-xxl-6">
                   <div class="card-body">
-                    <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
-                    <div class="card-text">ibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+                    <div class="card-title"><h4>Красноярский космонавт скоро отправится на МКС: что он там будет делать</h4></div>
+                    <div class="card-text overflow-hidden">Он уже пробыл больше недели на карантине</div>
+                    <small class="text-body-secondary">10 марта 2025, 09:58</small>
                   </div>
                 </div>
               </div>
@@ -115,58 +123,63 @@
     </div>
   </div>
 </div>
-  <!--Vertical-->
-  <div class="row justify-content-center">
+    <!--Vertical-->
+    <div class="row mt-3 justify-content-center">
 
-    <div class="col-10 mb-3 mt-0 mt-xl-3 mb-xl-0 col-md-5 col-xl-2">
-      <a href="page1.html" class="text-decoration-none">
-      <div class="card">
-        <img class="img-fluid rounded" src="page1.jpg">
-        <div class="card-body">
-          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
-          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+      <div class="col-10 mb-3 mb-xxl-0 col-md-5 col-xxl-2">
+        <a href="page1.html" class="text-decoration-none">
+        <div class="card">
+          <img class="img-fluid rounded" src="page1.jpg">
+          <div class="card-body">
+            <div class="card-title"><h4>История мирового рекорда, поставленного МиГ-25</h4></div>
+            <div class="card-text overflow-hidden">Вспоминаем легендарный полёт МиГ-25, в котором перехватчик поставил абсолютный рекорд высоты для самолётов, не побитый до сих пор</div>
+            <small class="text-body-secondary">8 марта 2025, 18:50</small>
+          </div>
         </div>
+        </a>
       </div>
-      </a>
-    </div>
-
-    <div class="col-10 mb-3 mt-0 mt-xl-3 mb-xl-0 col-md-5 col-xl-2">
-      <a href="page1.html" class="text-decoration-none">
-      <div class="card">
-        <img class="img-fluid rounded" src="page1.jpg">
-        <div class="card-body">
-          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
-          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+  
+      <div class="col-10 mb-3 mb-xxl-0 col-md-5 col-xxl-2">
+        <a href="page2.html" class="text-decoration-none">
+        <div class="card">
+          <img class="img-fluid rounded" src="page2.jpg">
+          <div class="card-body">
+            <div class="card-title"><h4>Росавиация хочет регламентировать полёты пчёл</h4></div>
+            <div class="card-text overflow-hidden">Росавиация предлагает, начиная с 2022 года, ввести ограничения на полёты пчёл, ос, шершней и других летучих насекомых. В ведомстве пояснили, что представители этих биологических видов создают помехи для безопасности движения воздушных судов гражданской авиации.
+            </div>
+            <small class="text-body-secondary">14 марта 2021, 16:35</small>
+          </div>
         </div>
+        </a>
       </div>
-      </a>
-    </div>
-
-    <div class="col-10 mb-3 mt-0 mt-xl-3 mb-xl-0 col-md-5 col-xl-2">
-      <a href="page1.html" class="text-decoration-none">
-      <div class="card">
-        <img class="img-fluid rounded" src="page1.jpg">
-        <div class="card-body">
-          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
-          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+  
+      <div class="col-10 mb-3 mb-xxl-0 col-md-5 col-xxl-2">
+        <a href="page3.html" class="text-decoration-none">
+        <div class="card">
+          <img class="img-fluid rounded" src="page3.png">
+          <div class="card-body">
+            <div class="card-title"><h4>Красноярский космонавт скоро отправится на МКС: что он там будет делать</h4></div>
+            <div class="card-text overflow-hidden">Он уже пробыл больше недели на карантине</div>
+            <small class="text-body-secondary">10 марта 2025, 09:58</small>
+          </div>
         </div>
+        </a>
       </div>
-      </a>
-    </div>
-
-    <div class="col-10 mb-3 mt-0 mt-xl-3 mb-xl-0 col-md-5 col-xl-2">
-      <a href="page1.html" class="text-decoration-none">
-      <div class="card">
-        <img class="img-fluid rounded" src="page1.jpg">
-        <div class="card-body">
-          <div class="card-title"><h4>CARDTITLE CARDTITLE CARDTITLE</h4></div>
-          <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum accusantium aut officiis quibusdam atque nostrum. Commodi, similique tempore minus possimus voluptates asperiores dolores ex perferendis deserunt voluptate accusantium cum ducimus?</div>
+  
+      <div class="col-10 mb-3 mb-xxl-0 col-md-5 col-xxl-2">
+        <a href="page1.html" class="text-decoration-none">
+        <div class="card">
+          <img class="img-fluid rounded" src="page1.jpg">
+          <div class="card-body">
+            <div class="card-title"><h4>История мирового рекорда, поставленного МиГ-25</h4></div>
+            <div class="card-text overflow-hidden">Вспоминаем легендарный полёт МиГ-25, в котором перехватчик поставил абсолютный рекорд высоты для самолётов, не побитый до сих пор</div>
+            <small class="text-body-secondary">8 марта 2025, 18:50</small>
+          </div>
         </div>
+        </a>
       </div>
-      </a>
+  
     </div>
-
-  </div>
 
 <!--Divider-->
 <div class="container-fluid">
@@ -180,34 +193,34 @@
 <!--Footer-->
 <div class="footer py-3 mt-3 mb-5">
   <div class="container-fluid">
-    <div class="row justify-content-xl-between"> <!-- Center the row -->
+    <div class="row justify-content-xxl-between justify-content-center"> <!-- Center the row -->
 
-      <!-- Column 1 -->
-      <div class="col-6 col-xl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
+      <div class="col-6 col-xxl-4 d-flex justify-content-center order-1 order-xxl-1"> <!-- Match width and alignment -->
         <ul class="nav flex-column">
-          <h3>Chegototam</h3>
-          <li>aodkflgbnafdiklug</li>
-          <li>aodkflgbnaf</li>
+          <h3>О нас</h3>
+          <li>
+            <a href="contacts.html">Контакты</a>
+          </li>
+          <li>История</li>
         </ul>
       </div>
 
-      <!-- Column 2 -->
-      <div class="col-6 col-xl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
+      <div class="col-6 col-xxl-4 d-flex justify-content-center order-3 order-xxl-2"> <!-- Match width and alignment -->
         <ul class="nav flex-column">
-          <h3>Chegototam</h3>
-          <li>aodkflgbnafdiklug</li>
-          <li>aodkflgb</li>
+          <h3>В соцсетях</h3>
+          <li>ВКонтакте</li>
+          <li>Telegram</li>
         </ul>
       </div>
 
-      <!-- Column 3 -->
-      <div class="col-6 mt-3 mt-xl-0 col-xl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
+      <div class="col-6 mt-3 mt-xxl-0 col-xxl-4 d-flex justify-content-center order-2 order-xxl-3"> <!-- Match width and alignment -->
         <ul class="nav flex-column">
-          <h3>Chegototam</h3>
-          <li>aodkflgbnafdiklug</li>
-          <li>aodkflgbnaf</li>
+          <h3>Дополнительное</h3>
+          <li>Что-то там</li>
+          <li>Ещё что-то там</li>
         </ul>
       </div>
+
     </div>
   </div>
 </div>
