--- a/Web/lab2/page1.html
+++ b/Web/lab2/page1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PAGE 1</title>
+    <title>Новость 1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
   </head>
@@ -11,20 +11,35 @@
     
 <!--Navbar-->
 <nav class="navbar shadow-lg fixed-top">
-  <div class="container-fluid justify-content-center justify-content-xl-start"> <!-- Added justify-content-center -->
+  <div class="container-fluid justify-content-center justify-content-xxl-start"> <!-- Added justify-content-center -->
     <a class="navbar-brand display-1" href="index.html">News from far beyond</a>
   </div>
 </nav>
 
 <!--Main content-->
 <div class="container-fluid">
-  <div class="row justify-content-center">
+  <div class="row mt-5 justify-content-center">
     <div class="col-10">
-      <h1 class="display ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim totam, repellat eaque vitae cumque culpa? Dolor natus reprehenderit vel, nemo a molestiae, voluptate maiores ullam nostrum fugiat consequuntur quia ipsa.</h1>
-      <h3 class="display py-3">lorem ipsum</h3>
-      <img class="img-fluid rounded" src="page1.jpg">
-      <p class="mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam corrupti magni sequi fugit ullam eos dolores, dolorum porro dicta alias repellendus aut quas impedit! Perferendis optio magnam earum accusantium quibusdam.</p>
-    </div>
+      <h1 class="display ">История мирового рекорда, поставленного МиГ-25</h1>
+      <h3 class="display py-3">
+        Вспоминаем легендарный полёт МиГ-25, в котором перехватчик поставил абсолютный рекорд высоты для самолётов, не побитый до сих пор
+      </h3>
+      <div class="row">
+        <p class="mb-3">8 марта 2025, 18:50</p>
+      </div>
+      <img class="img-fluid rounded mb-3" src="page1.jpg">
+      <h4>В космос на МиГ-25: рекорд высоты, не побитый до сих пор</h5>
+        <p>
+            «Небо там густо-фиолетовое, звёзды видно даже днём, а Земля круглая», — так описывал свои ощущения единственный человек, поднявшийся на высоту 37 650 метров на МиГ-25. Этот рекорд был установлен 31 августа 1977 года выдающимся лётчиком-испытателем Александром Федотовым. С тех пор, на протяжении почти полвека, никто не смог подняться так высоко ни на этом, ни на каком-либо другом самолёте.
+            
+            Трагическая судьба покорителя стратосферы
+            Жизнь выдающегося советского лётчика-испытателя Александра Федотова трагически оборвалась 4 апреля 1984 года во время испытаний второго прототипа сверхзвукового перехватчика МиГ-31. Ошибка в показаниях приборов привела к катастрофической ситуации. По официальной версии датчик топлива отключился и Федотов, подумав, что пробил бак и топлива почти не осталось, принял решение срочно возвращаться на аэродром. Однако на самом деле баки самолёта были практически полными. Резкий манёвр тяжёлого истребителя закончился неуправляемым пике, и ни Федотов, ни его штурман Владимир Зайцев не успели катапультироваться.
+        </p>
+        <h4>Трагическая судьба покорителя стратосферы</h4>
+        <p>
+            Жизнь выдающегося советского лётчика-испытателя Александра Федотова трагически оборвалась 4 апреля 1984 года во время испытаний второго прототипа сверхзвукового перехватчика МиГ-31. Ошибка в показаниях приборов привела к катастрофической ситуации. По официальной версии датчик топлива отключился и Федотов, подумав, что пробил бак и топлива почти не осталось, принял решение срочно возвращаться на аэродром. Однако на самом деле баки самолёта были практически полными. Резкий манёвр тяжёлого истребителя закончился неуправляемым пике, и ни Федотов, ни его штурман Владимир Зайцев не успели катапультироваться.
+            Александр Федотов был выдающимся лётчиком-испытателем, обладателем множества международных наград и званий, в том числе Героя Советского Союза. Он работал в ОКБ Микояна-Гуревича и тестировал всю линейку истребителей МиГ, начиная с МиГ-19 и заканчивая роковым для него МиГ-31. Федотов был первым советским пилотом, трижды преодолевшим звуковой барьер. Ему принадлежит 18 высших мировых достижений в авиации, многие из которых до сих пор не удалось превзойти. Среди всех моделей МиГов Федотов особенно любил МиГ-25, на котором он установил большинство своих рекордов.
+        </p>    </div>
   </div>
 </div>
 
@@ -62,34 +77,34 @@
 <!--Footer-->
 <div class="footer py-3 mt-3 mb-5">
   <div class="container-fluid">
-    <div class="row justify-content-xl-between"> <!-- Center the row -->
+    <div class="row justify-content-xxl-between justify-content-center"> <!-- Center the row -->
 
-      <!-- Column 1 -->
-      <div class="col-6 col-xl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
+      <div class="col-6 col-xxl-4 d-flex justify-content-center order-1 order-xxl-1"> <!-- Match width and alignment -->
         <ul class="nav flex-column">
-          <h3>Chegototam</h3>
-          <li>aodkflgbnafdiklug</li>
-          <li>aodkflgbnaf</li>
+          <h3>О нас</h3>
+          <li>
+            <a href="contacts.html">Контакты</a>
+          </li>
+          <li>История</li>
         </ul>
       </div>
 
-      <!-- Column 2 -->
-      <div class="col-6 col-xl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
+      <div class="col-6 col-xxl-4 d-flex justify-content-center order-3 order-xxl-2"> <!-- Match width and alignment -->
         <ul class="nav flex-column">
-          <h3>Chegototam</h3>
-          <li>aodkflgbnafdiklug</li>
-          <li>aodkflgb</li>
+          <h3>В соцсетях</h3>
+          <li>ВКонтакте</li>
+          <li>Telegram</li>
         </ul>
       </div>
 
-      <!-- Column 3 -->
-      <div class="col-6 mt-3 mt-xl-0 col-xl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
+      <div class="col-6 mt-3 mt-xxl-0 col-xxl-4 d-flex justify-content-center order-2 order-xxl-3"> <!-- Match width and alignment -->
         <ul class="nav flex-column">
-          <h3>Chegototam</h3>
-          <li>aodkflgbnafdiklug</li>
-          <li>aodkflgbnaf</li>
+          <h3>Дополнительное</h3>
+          <li>Что-то там</li>
+          <li>Ещё что-то там</li>
         </ul>
       </div>
+
     </div>
   </div>
 </div>
