--- a/Web/lab2/page3.html
+++ b/Web/lab2/page3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PAGE 3</title>
+    <title>Новость 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
   </head>
@@ -11,20 +11,33 @@
     
 <!--Navbar-->
 <nav class="navbar shadow-lg fixed-top">
-  <div class="container-fluid justify-content-center justify-content-xl-start"> <!-- Added justify-content-center -->
+  <div class="container-fluid justify-content-center justify-content-xxl-start"> <!-- Added justify-content-center -->
     <a class="navbar-brand display-1" href="index.html">News from far beyond</a>
   </div>
 </nav>
 
 <!--Main content-->
 <div class="container-fluid">
-  <div class="row justify-content-center">
+  <div class="row mt-5 justify-content-center">
     <div class="col-10">
-      <h1 class="display ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim totam, repellat eaque vitae cumque culpa? Dolor natus reprehenderit vel, nemo a molestiae, voluptate maiores ullam nostrum fugiat consequuntur quia ipsa.</h1>
-      <h3 class="display py-3">lorem ipsum</h3>
-      <img class="img-fluid rounded" src="page1.jpg">
-      <p class="mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam corrupti magni sequi fugit ullam eos dolores, dolorum porro dicta alias repellendus aut quas impedit! Perferendis optio magnam earum accusantium quibusdam.</p>
-    </div>
+      <h1 class="display ">Красноярский космонавт скоро отправится на МКС: что он там будет делать</h1>
+      <h3 class="display py-3">
+        Он уже пробыл больше недели на карантине
+      </h3>
+      <div class="row">
+        <p class="mb-3">10 марта 2025, 09:58</p>
+      </div>
+      <img class="img-fluid rounded mb-3" src="page3.png">
+      <p>
+        Красноярский космонавт Кирилл Песков отправится на МКС 13 марта в составе экипажа миссии Crew-10. Вместе с коллегами по экипажу — астронавтами Энн МакКлейн, Николь Эйрс, Такуя Ониши — он ушел на двухнедельный карантин перед стартом к МКС, об этом сообщалось в телеграм-канале Роскосмоса еще 28 февраля.
+        </p>
+        <p>По сообщению госкорпорации, экипаж прибудет на космодром на мысе Канаверал (штат Флорида) 7 марта. Уже 13 марта корабль Crew Dragon стартует на МКС, стыковка планируется в 14:55 по московскому времени.
+        </p>
+        <p>Ранее мы сообщали, что Кирилл Песков будет обслуживать российский сегмент МКС, это уточняли в «Роскосмосе».
+        </p>
+        <p>Годным к космическому полету Кирилла Пескова признали в июле 2024 года. Тогда он стал дублером российского космонавта Александра Горбунова, который отправился на МКС в составе миссии Crew-9 в августе 2024 года.
+        </p>
+      </div>
   </div>
 </div>
 
@@ -62,38 +75,37 @@
 <!--Footer-->
 <div class="footer py-3 mt-3 mb-5">
   <div class="container-fluid">
-    <div class="row justify-content-xl-between"> <!-- Center the row -->
+    <div class="row justify-content-xxl-between justify-content-center"> <!-- Center the row -->
 
-      <!-- Column 1 -->
-      <div class="col-6 col-xl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
+      <div class="col-6 col-xxl-4 d-flex justify-content-center order-1 order-xxl-1"> <!-- Match width and alignment -->
         <ul class="nav flex-column">
-          <h3>Chegototam</h3>
-          <li>aodkflgbnafdiklug</li>
-          <li>aodkflgbnaf</li>
+          <h3>О нас</h3>
+          <li>
+            <a href="contacts.html">Контакты</a>
+          </li>
+          <li>История</li>
         </ul>
       </div>
 
-      <!-- Column 2 -->
-      <div class="col-6 col-xl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
+      <div class="col-6 col-xxl-4 d-flex justify-content-center order-3 order-xxl-2"> <!-- Match width and alignment -->
         <ul class="nav flex-column">
-          <h3>Chegototam</h3>
-          <li>aodkflgbnafdiklug</li>
-          <li>aodkflgb</li>
+          <h3>В соцсетях</h3>
+          <li>ВКонтакте</li>
+          <li>Telegram</li>
         </ul>
       </div>
 
-      <!-- Column 3 -->
-      <div class="col-6 mt-3 mt-xl-0 col-xl-4 d-flex justify-content-center"> <!-- Match width and alignment -->
+      <div class="col-6 mt-3 mt-xxl-0 col-xxl-4 d-flex justify-content-center order-2 order-xxl-3"> <!-- Match width and alignment -->
         <ul class="nav flex-column">
-          <h3>Chegototam</h3>
-          <li>aodkflgbnafdiklug</li>
-          <li>aodkflgbnaf</li>
+          <h3>Дополнительное</h3>
+          <li>Что-то там</li>
+          <li>Ещё что-то там</li>
         </ul>
       </div>
+
     </div>
   </div>
 </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
